v0.14 tweaks and fixes, fixed the horizontal scrolling issue

--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,18 @@
   box-sizing: border-box;
   font-size: 20px;
   font-family: fredoka;
+  margin: 0%;
+  padding: 0%;
+  border: 0%;
 }
 
 body {
   color: white;
-  width: 100svw;
+  width: 100vw;
   margin: 0%;
   padding: 0%;
   border: 0%;
+  overflow-x: hidden;
 }
 header {
   position: relative;
@@ -53,7 +57,7 @@ main {
 
 #loader-backdrop{
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   top: 0;
   display: flex;
@@ -81,7 +85,6 @@ main {
   border-radius: 10px;
   background-color: rgb(0, 0, 0);
   border: 2px solid rgb(192, 0 , 0) ;
-  
 }
 
 .pic-div {
@@ -94,7 +97,6 @@ main {
   border-radius: 50%;
   border: 15px solid var(--blue);
   position: relative;
-  
 }
 
 .pointing-left {
@@ -141,11 +143,8 @@ main {
 }
 .gallery-img:active {
   transform: scale(1);
-  
 }
-/* @keyframes galleryHover {
- 
-} */
+
 footer {
   height: 20vh;
   background: linear-gradient( var(--turquoise), var(--turquoise), var(--darkblue),var(--darkness));
@@ -156,12 +155,10 @@ footer {
 .gallery-text {
   align-content: center;
   justify-items: center;
-
   background: radial-gradient( hsla(0, 0%, 0%, 0.2), hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0));
-  
 }
 .gallery-text p {
-  
+  padding: 0 25%;
   text-align: center;
 }
 .social-links {
